# opengl-rust

./: .gitignore  Cargo.toml  README.md
src/: draw.rs  main.rs  mat.rs  model.rs  shaders.rs
